# deadbeef-statusnotifier-plugin

./: .clang-format  .gitignore  AUTHORS  CMakeLists.txt  Makefile  README.md  cmake.sh
builder/: bundle.tar.xz
bundle/: bundle.tar.xz
extras/statusnotifier/: README.md
extras/statusnotifier/src/: enums.c.template  enums.h.template  statusnotifier.c  statusnotifier.h
src/: menu.c  sni.c  sni.h  sni_flags.c  sni_timer.c  sni_upd.c  x11-force-focus.c  x11-force-focus.h
tools/: glib-mkenums
